@@ -2,6 +2,9 @@
 
  * Fix reading of chunks in server. (Jelmer Vernooĳ, #977)
 
+ * Support applying of URL rewriting using ``insteadOf`` / ``pushInsteadOf``.
+   (Jelmer Vernooĳ, #706)
+
 0.20.43	2022-06-07
 
  * Lazily import url2pathname.
